src/test/deca/context/valid/provided/ContextSansObjet/Boucle/WhileTrue.deca
//Description
//	while true basique avec instance
//Résultats
//	ok

{
int i = 0;
while (true){
i = i + 1;
println(i);
}
}
