src/test/deca/context/invalid/provided/ContextSansObjet/IdentificationBoolAssignInt.deca
//Description :
//	affectation d'un int à une variable définie comme boolean
//
//Résultats :
//	Erreur contextuelle
//	Ligne 10 : 

{
	boolean x;
	x = 1;
	println(x);
}